[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://src/ScoreLabel.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.7947
height = 9.61197

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_bottom = 320

[node name="SidestepTimer" type="Timer" parent="."]
one_shot = true

[node name="DebugLabel" type="Label" parent="."]
margin_left = -16.0
margin_top = -32.0
margin_right = 16.0
margin_bottom = -17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
margin_left = 568.0
margin_top = 8.0
margin_right = 619.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score: 0"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="beat_enemy" from="." to="CanvasLayer/ScoreLabel" method="_on_Player_beat_enemy"]
[connection signal="timeout" from="SidestepTimer" to="." method="_on_SidestepTimer_timeout"]
